fix: faq-area,why-choose section-title align responsive

--- a/css/style.css
+++ b/css/style.css
@@ -15200,6 +15200,11 @@ ul.children {
     padding: 0 12px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .elementor-section.why-choose-area.style-2 > .elementor-container .list-item-wrapper {
+    text-align: start;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .elementor-section.why-choose-area.style-2 > .elementor-container .list-item-wrapper ul li {
     justify-content: center;
@@ -15208,6 +15213,11 @@ ul.children {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .elementor-section.why-choose-area.style-2 > .elementor-container .btn-wrapper {
     text-align: center;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .elementor-section.why-choose-area.style-2 > .elementor-container .about-image-card {
+    margin-top: 24px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -15323,12 +15333,12 @@ ul.children {
     margin-bottom: 0;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .elementor-section.faq-area.style-2 > .elementor-container .elementor-col-50 .btn-wrapper {
     text-align: center;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .elementor-section.faq-area.style-2 > .elementor-container .elementor-col-50 .accordion {
     margin-top: 32px;
   }
